# wallet-gui

./: .gitignore  Cargo.toml  ChronX_Android_v1.4.87.apk.idsig  build-android.bat  build-windows.bat  chronx-wallet-v1.4.82-aligned.apk.idsig  index.html  loan_api_patch.py  loan_api_patch2.py  loan_db_patch.py  loan_default_save_patch.py  loan_engine_patch.py  loan_imports_patch.py  loan_rpc_types_patch.py  loan_server_patch.py  new-endpoints.js  patch_bugs.py  patch_cli.py  patch_engine.py  patch_genesis.py  patch_notify.py  patch_notify2.py  patch_transaction.py  version.json
assets/: style.css
src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/c/: seeded_keygen.c
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: commands.rs  contacts.rs  lib.rs  main.rs
src/i18n/: ar.json  de.json  en.json  es.json  fr.json  ru.json  ur.json  zh.json
