# Standalone WASM crate — not part of the parent chronx workspace.
[workspace]

[package]
name = "chronx-wallet-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos               = { version = "0.7", features = ["csr"] }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3", features = ["MouseEvent"] }
serde                = { version = "1", features = ["derive"] }
serde-wasm-bindgen   = "0.6"
serde_json           = "1"
console_error_panic_hook = "0.1"
base64              = "0.22"
