# Standalone crate — not part of the parent chronx workspace.
[workspace]

[package]
name = "chronx-wallet-gui"
version = "2.5.15"
edition = "2021"

[features]
default = []
mobile = []

[lib]
name = "chronx_wallet_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chronx-wallet-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
bincode     = { version = "1" }
hex         = { version = "0.4" }
chrono      = { version = "0.4" }
anyhow      = { version = "1" }
sha2        = { version = "0.10" }
base64      = { version = "0.22" }
blake3      = { version = "1" }
rand        = { version = "0.8" }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-opener = "2"
x25519-dalek       = { version = "2", features = ["static_secrets"] }
chacha20poly1305   = "0.10"
hkdf               = "0.12"
bip39         = { version = "2", features = ["rand"] }
chronx-core   = { path = "../../crates/chronx-core" }
chronx-crypto = { path = "../../crates/chronx-crypto" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Security_Credentials_UI",
  "Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
